--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      pages: write 
+      id-token: write 
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy_pages.outputs.page_url }}
+
     steps:
       - name: 🔧 Setup buildx
         uses: docker/setup-buildx-action@v3
@@ -44,7 +53,7 @@ jobs:
         id: cache
         uses: actions/cache@v4
         with:
-          key: ${{ env.REPO_NAME }}_target_and_registry__cache-${{ hashFiles('**/Cargo.toml') }}
+          key: ${{ env.REPO_NAME }}_target_and_registry_cache-${{ hashFiles('**/Cargo.toml') }}
           path: |
             target
             cargo_registry
@@ -58,10 +67,10 @@ jobs:
           mkdir -p target
           mkdir -p cargo_registry
           echo "Cache hit: ${{ steps.cache.outputs.cache-hit }}"
-          echo "du -sh target/*: `du -sh target/*`"
-          echo "du -sh cargo_registry/*: `du -sh cargo_registry/*`"
+          echo "du -sh target/*: `(cd target; du -sh *)`"
+          echo "du -sh cargo_registry/*: `(cd cargo_registry; du -sh *)`"
 
-      - name: Try it with just run...
+      - name: Build the project in docker
         uses: addnab/docker-run-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -69,23 +78,26 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           image: ghcr.io/cs2dsb/eggercise.rs/rust/nightly:latest
           options: |
-            -v ${{ github.workspace }}/target:/server/target 
+            -e RUSTUP_PERMIT_COPY_RENAME=false
+            -v ${{ github.workspace }}/:/server
             -v ${{ github.workspace }}/cargo_registry:/usr/local/cargo/registry
             -w /server
           run: |
-            echo "Running Script"
             set -e
-            echo $CARGO_HOME
-            du -sh target/*
+            echo $CARGO_HOME:
+            (cd $CARGO_HOME; du -sh * || true)
+            echo target before:
+            (cd target; du -sh * || true)
             cargo build --release --bin server
-            du -sh target/*
-            cd /server
-            mkdir dist
-            cd dist
+            echo target after:
+            (cd target; du -sh * || true)
+            mkdir -p /server/dist
+            cd /server/dist
             cp ../target/release/server .
             cp -r ../crates/server/assets .
-            cd ..
+            cd /server
             cargo doc \
+                --release \
                 --no-deps \
                 --workspace \
                 --all-features \
@@ -93,25 +105,19 @@ jobs:
             echo '<meta http-equiv="refresh" content="0;url=server/index.html">' \
                 | tee target/doc/index.html
             rm target/doc/.lock
-            du -sh target/*
+            echo target after doc:
+            (cd target; du -sh * || true)
+            echo $CARGO_HOME after:
+            (cd $CARGO_HOME; du -sh * || true)
+      
+      - name: Fix the permissions after docker mucked them up
+        run: |
+          sudo chown -R $USER:$USER "${{ github.workspace }}"
 
       - name: 🪲 Cache debug after run
         run: |
-          mkdir -p target
-          mkdir -p cargo_registry
-          echo "Cache hit: ${{ steps.cache.outputs.cache-hit }}"
-          echo "du -sh target/*: `du -sh target/*`"
-          echo "du -sh cargo_registry/*: `du -sh cargo_registry/*`"
-
-      - name: 💉 Inject cache into docker
-        if: false
-        uses: reproducible-containers/buildkit-cache-dance@v3.1.0
-        with:
-          cache-map: |
-            {
-              "target": "/server/target"
-            }
-          skip-extraction: ${{ steps.cache.outputs.cache-hit }}
+          echo "du -sh target/*: `(cd target; du -sh * || true)`"
+          echo "du -sh cargo_registry/*: `(cd cargo_registry; du -sh * || true)`"
 
       - name: 🔑 Log into registry ${{ env.REGISTRY }} 
         if: github.event_name != 'pull_request'
@@ -122,7 +128,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📦 Build docker 
-        if: false
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -132,8 +137,7 @@ jobs:
           file: ./docker/Dockerfile
 
       - name: 🗜️ Package output 
-        if: false
-        # if: github.ref == 'refs/heads/deploy'
+        if: github.ref == 'refs/heads/deploy'
         id: package_image
         run: |
           set -euo pipefail
@@ -168,53 +172,15 @@ jobs:
           promote: true
           prerelease: false
 
-  # docs:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-    
-  #   permissions:
-  #     pages: write 
-  #     id-token: write 
+      - name: Setup pages
+        id: pages
+        uses: actions/configure-pages@v4
 
-  #   environment:
-  #     name: github-pages
-  #     url: ${{ steps.deployment.outputs.page_url }}
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: target/doc
 
-  #   steps:
-  #     - name: 🔍 Set build suffix 
-  #       run: |
-  #         REPO=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
-  #         echo "REPO_NAME=$REPO" | tee -a $GITHUB_ENV
-
-  #     - name: 🛒 Checkout repo
-  #       uses: actions/checkout@master
-
-  #     - name: 🎯 Cache target dir (restore)
-  #       id: cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         key: ${{ env.REPO_NAME }}_target_cache-${{ hashFiles('**/Cargo.toml') }}
-  #         path: |
-  #           target
-  #         restore-keys: |
-  #           ${{ env.REPO_NAME }}_target_cache-
-  #         save-always: true
-
-  #     - name: 🪲 Cache debug
-  #       run: |
-  #         mkdir -p target
-  #         echo "Cache hit: ${{ steps.cache.outputs.cache-hit }}"
-  #         echo "du -sh target/*: `du -sh target/*`"
-
-  #     - name: Setup pages
-  #       id: pages
-  #       uses: actions/configure-pages@v4
-
-  #     - name: Upload artifact
-  #       uses: actions/upload-pages-artifact@v3
-  #       with:
-  #         path: target/doc
-
-  #     - name: Deploy to GitHub Pages
-  #       id: deployment
-  #       uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deploy_pages
+        uses: actions/deploy-pages@v4
