--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -67,7 +67,9 @@ tokio = { version = "1.37.0", features = [ "full" ] }
 tokio-util = "0.7.10"
 
 # HTTP utils
-tower-http = { version = "0.5.2", features = [ "trace", "fs", "set-header", "cors" ] }
+tower-http = { version = "0.5.2", features = [ 
+    "trace", "fs", "set-header", "cors",
+    "compression-br", "compression-deflate", "compression-gzip", "compression-zstd" ] }
 tower = "0.4.13"
 
 # ZSTD encryption bindings
