Added all client routes as server handlers so refreshing on a non-index path works correctly even if the service worker isn't installed

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -16,6 +16,7 @@ glob = "0.3.1"
 
 [dependencies]
 shared = { path = "../shared", features = [ "backend" ] }
+client = { path = "../client" }
 anyhow.workspace = true
 leptos.workspace = true
 tracing.workspace = true
