--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM ghcr.io/cs2dsb/eggercise.rs/rust/nightly-slim:latest AS runtime
 RUN apt-get update && apt-get install -y openssl
 WORKDIR /server
 COPY ./dist/server /usr/local/bin
-RUN mkdir -p /opt/server
+RUN mkdir -p /opt/server/database
 COPY ./dist/assets /opt/server/assets
 
 ENV RUST_LOG=warn,server=debug,service-worker=debug,shared=debug,sqlite_profiling=trace,sqlite_tracing=trace,sqlite=trace
