--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "eggercise.rs",
   "version": "0.0.0",
-  "dependencies": {
+  "scripts": {
+    "dev": "vite",
+    "build": "cargo build --package server"
+  },
+  "devDependencies": {
     "open-props": "^1.7.4",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
-    "postcss-jit-props": "^1.0.14"
+    "postcss-jit-props": "^1.0.14",
+    "vite": "^5.2.13",
+    "vite-plugin-run": "^0.5.2"
   }
 }
