--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -37,3 +37,5 @@ web-sys = { workspace = true, features = [
 
 shared = { path = "../shared", features = [ "frontend" ] }
 time = { version = "0.3.36", features = ["wasm-bindgen"] }
+#TODO: this rev fixes nightly compile. Swap to crates.io once it is released
+leptos-chartistry = { git = "https://github.com/feral-dot-io/leptos-chartistry" , rev = "9b65512" }
