--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "open-props": "^1.7.4",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
+    "postcss-custom-media": "^10.0.6",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
+    "sanitize.css": "^13.0.0",
     "vite": "^5.2.13",
     "vite-plugin-run": "^0.5.2"
   }
