--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "cargo build --package server"
   },
   "devDependencies": {
+    "@csstools/postcss-rebase-url": "^1.0.9",
     "open-props": "^1.7.4",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
