--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -7,6 +7,8 @@ version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+web-time.workspace = true
+futures.workspace = true
 leptos.workspace = true 
 leptos_router.workspace = true
 console_error_panic_hook.workspace = true
