--- a/.github/workflows/cargo_sweep_caches.yml
+++ b/.github/workflows/cargo_sweep_caches.yml
@@ -4,8 +4,8 @@ env:
   CARGO_TERM_COLOR: always
   
 on:
-  schedule:
-    - cron: "0 7 * * *"
+  # schedule:
+  #   - cron: "0 7 * * *"
   workflow_dispatch:
 
 jobs:
