--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -10,7 +10,6 @@ backend = [
     "exemplar", 
     "sea-query", 
     "sea-query-rusqlite", 
-    "uuid/v4", 
     "webauthn-rs", 
     "axum", 
     "deadpool-sqlite", 
@@ -18,19 +17,20 @@ backend = [
     "sea-query-enum", 
     "exemplar-model",
 ]
-frontend = [ 
+wasm = [ 
     "web-sys", 
     "wasm-bindgen", 
     "gloo-net", 
     "leptos", 
     "exemplar", 
     "sea-query",
+    "uuid/js",
 
     "sea-query-enum",
 ]
 build = [ "anyhow" ]
 
-# These exist to remove the any(frontend, backend) scattered through the code
+# These exist to remove the any(wasm, backend) scattered through the code
 # Enable sea query enum derives
 sea-query-enum = []
 # Enable the examplar model derive for from_row
@@ -67,4 +67,4 @@ webauthn-rs = { workspace = true, optional = true }
 
 exemplar = { version = "0.9.0", optional = true }
 percent-encoding = "2.3.1"
-uuid = { version = "1.0", features = [ "serde" ] }
+uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false }
