--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -21,6 +21,7 @@ wasm = [
     "web-sys", 
     "wasm-bindgen", 
     "gloo-net", 
+    "gloo-utils",
     "leptos", 
     "exemplar", 
     "sea-query",
@@ -57,6 +58,7 @@ deadpool-sqlite = { workspace = true, optional = true }
 leptos = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
 gloo-net = { workspace = true, optional = true }
+gloo-utils = { workspace = true, optional = true }
 web-sys = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
 rusqlite = { workspace = true, optional = true }
