--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -13,6 +13,7 @@ backend = [
     "webauthn-rs", 
     "axum", 
     "deadpool-sqlite", 
+    "web-push",
 
     "sea-query-enum", 
     "exemplar-model",
@@ -26,6 +27,7 @@ wasm = [
     "exemplar", 
     "sea-query",
     "uuid/js",
+    "base64",
 
     "sea-query-enum",
 ]
@@ -59,14 +61,20 @@ leptos = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
 gloo-net = { workspace = true, optional = true }
 gloo-utils = { workspace = true, optional = true }
-web-sys = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
 rusqlite = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 sea-query = { workspace = true, optional = true }
 sea-query-rusqlite = { workspace = true, optional = true }
 webauthn-rs = { workspace = true, optional = true }
+base64 = { workspace = true, optional = true }
+web-push = { workspace = true, optional = true }
 
 exemplar = { version = "0.9.0", optional = true }
 percent-encoding = "2.3.1"
 uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false }
+
+web-sys = { workspace = true, optional = true, features = [ 
+    "PushSubscription",
+    "PushEncryptionKeyName",
+] }
