--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,36 @@ jobs:
       url: ${{ steps.deploy_pages.outputs.page_url }}
 
     steps:
+      - name: 🖴 Check disk space
+        run: df . -h
+
+      - name: 🪓Free disk space
+        run: |
+          # sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
+          sudo rm -rf \
+            /usr/share/dotnet /usr/local/lib/android /opt/ghc \
+            /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup \
+            /usr/lib/jvm || true
+          
+          sudo apt-get purge aria2 ansible azure-cli shellcheck rpm xorriso zsync \
+            esl-erlang firefox gfortran-8 gfortran-9 google-chrome-stable \
+            google-cloud-sdk imagemagick libmagickcore-dev libmagickwand-dev \
+            libmagic-dev ant ant-optional kubectl mercurial apt-transport-https \
+            mono-complete libmysqlclient unixodbc-dev yarn chrpath libssl-dev \
+            libxft-dev libfreetype6 libfreetype6-dev libfontconfig1 \
+            libfontconfig1-dev snmp pollinate libpq-dev postgresql-client \
+            powershell ruby-full sphinxsearch subversion mongodb-org azure-cli \
+            microsoft-edge-stable google-cloud-sdk microsoft-edge-stable \
+            microsoft-edge-stable '^mysql' '^php' '^dotnet' \
+            -y -f || true
+
+          sudo apt-get autoremove -y || true
+          sudo apt-get autoclean -y || true
+          
+      - name: 🖴 Check disk space
+        run: |
+          df . -h
+
       - name: 🔧 Setup buildx
         uses: docker/setup-buildx-action@v3
 
