Added a version check at startup so we know when a new version has been deployed
Service worker notification code now displays the actual payload from the server

--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -18,17 +18,13 @@ js-sys = "0.3.69"
 shared = { path = "../shared", features = [ "wasm" ] }
 web-sys = { workspace = true, features = [ 
     "console", "FetchEvent",  "Request",  
-    "ReadableStream",  "ReadableStreamDefaultReader", 
-    "Headers",  "ResponseInit",  "Response", 
+    "ReadableStream", "ReadableStreamDefaultReader", 
+    "Headers", "ResponseInit", "Response", 
     "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
     "WorkerLocation", "Clients", "CacheStorage",
     "Cache", "RequestInit", "MessageEvent", "Url",
-    "PushEvent",
-    "Event",
-    "PushManager",
-    "ServiceWorkerRegistration",
-    "NotificationOptions",
-    "PushSubscriptionOptionsInit",
-    "PushSubscription",
-    "PushEncryptionKeyName",
+    "PushEvent", "Event", "PushManager", 
+    "ServiceWorkerRegistration", "NotificationOptions", 
+    "PushSubscriptionOptionsInit", "PushSubscription", 
+    "PushEncryptionKeyName", "PushMessageData",
 ] }
