--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -78,3 +78,4 @@ web-sys = { workspace = true, optional = true, features = [
     "PushSubscription",
     "PushEncryptionKeyName",
 ] }
+semver = "1.0.23"
