Service worker now launches a new tab if there isn't one running

--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -27,4 +27,5 @@ web-sys = { workspace = true, features = [
     "ServiceWorkerRegistration", "NotificationOptions", 
     "PushSubscriptionOptionsInit", "PushSubscription", 
     "PushEncryptionKeyName", "PushMessageData",
+    "NotificationEvent","Notification", "WindowClient",
 ] }
