--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ sha2 = "0.10.8"
 
 leptos = { version = "0.6.12", features = ["nightly", "csr"] }
 leptos_router = { version = "0.6.12", features = ["nightly", "csr"] }
-leptos_reactive = "=0.6.5"
+leptos_reactive = "0.6.12"
 
 # SQLite lib
 rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }
