Made notification high priority to attempt to get it delivered on mobile in a reasonable timeframe
Added sent timestamp to notifications to track the delay

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -57,7 +57,8 @@ futures = "0.3.30"
 rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
 
 # Se/deserializing 
-serde = { workspace = true }
+serde.workspace = true
+serde_json.workspace = true
 
 # Async runtime
 tokio = { version = "1.37.0", features = [ "full" ] }
