--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -13,6 +13,7 @@ wasm-bindgen-futures.workspace = true
 wasm-bindgen.workspace = true
 gloo-utils.workspace = true
 serde_json.workspace = true
+chrono.workspace = true
 
 js-sys = "0.3.69"
 shared = { path = "../shared", features = [ "wasm" ] }
