--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -83,5 +83,6 @@ web-sys = { workspace = true, optional = true, features = [
     "PushEncryptionKeyName",
     "PushManager",
     "PushSubscriptionOptionsInit",
+    "Exception",
 ] }
 semver = "1.0.23"
