--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -30,6 +30,9 @@ wasm = [
     "base64",
     "mime",
     "wasm-bindgen-futures",
+    "tracing-web",
+    "time",
+    "tracing-subscriber/time",
 
     "sea-query-enum",
 ]
@@ -73,6 +76,8 @@ sea-query-rusqlite = { workspace = true, optional = true }
 webauthn-rs = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 web-push = { workspace = true, optional = true }
+tracing-web = { workspace = true, optional = true}
+time = { workspace = true, optional = true}
 
 exemplar = { version = "0.9.0", optional = true }
 percent-encoding = "2.3.1"
