Added retries to service worker install (seeing random network errors which don't match the server log)
Added extra logging around JsError to try and work out why service worker is getting fetch errors even on localhost occasionally

--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -14,6 +14,7 @@ wasm-bindgen.workspace = true
 gloo-utils.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
+tracing.workspace = true
 
 js-sys = "0.3.69"
 shared = { path = "../shared", features = [ "wasm" ] }
