--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-RUST_LOG=info,server=debug,service-worker=debug,shared=debug,sqlite_profiling=trace,sqlite=trace
+RUST_LOG=warn,server=debug,service-worker=debug,shared=debug,sqlite_profiling=trace,sqlite_tracing=warn,sqlite=trace,http_log=trace,web_push::client=trace,[client_log]=trace
 BIND_ADDR=0.0.0.0
 PORT=9090
-WEBAUTHN_ORIGIN=http://127.0.0.1:9090
-WEBAUTHN_ID=127.0.0.1
+WEBAUTHN_ORIGIN=http://localhost:9090
+CORS_ORIGIN=http://localhost:9090
+WEBAUTHN_ID=localhost
