--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -33,6 +33,7 @@ wasm = [
     "tracing-web",
     "time",
     "tracing-subscriber/time",
+    "serde_json",
 
     "sea-query-enum",
 ]
@@ -79,6 +80,7 @@ web-push = { workspace = true, optional = true }
 tracing-web = { workspace = true, optional = true}
 time = { workspace = true, optional = true}
 
+stdext = "0.3.3"
 exemplar = { version = "0.9.0", optional = true }
 percent-encoding = "2.3.1"
 uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false }
