--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -12,6 +12,7 @@ console_error_panic_hook.workspace = true
 wasm-bindgen-futures.workspace = true
 wasm-bindgen.workspace = true
 gloo-utils.workspace = true
+gloo-net.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
 tracing.workspace = true
