--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -34,6 +34,7 @@ wasm = [
     "time",
     "tracing-subscriber/time",
     "serde_json",
+    "headers",
 
     "sea-query-enum",
 ]
@@ -77,8 +78,9 @@ sea-query-rusqlite = { workspace = true, optional = true }
 webauthn-rs = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 web-push = { workspace = true, optional = true }
-tracing-web = { workspace = true, optional = true}
-time = { workspace = true, optional = true}
+tracing-web = { workspace = true, optional = true }
+time = { workspace = true, optional = true }
+headers = { workspace = true, optional = true }
 
 stdext = "0.3.3"
 exemplar = { version = "0.9.0", optional = true }
