--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -36,8 +36,15 @@ base64.workspace = true
 rand.workspace = true
 web-push.workspace = true
 headers.workspace = true
+dashmap.workspace = true
+
 rusqlite = { workspace = true, features = [ "bundled" ] }
 webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }
+# web-sys = { workspace = true, features = [
+#     "RtcSessionDescriptionInit",
+#     "RtcSdpType",
+    
+# ]}
 
 
 
@@ -74,5 +81,4 @@ axum-extra = { version = "0.9.3", features = ["typed-header"] }
 tower-layer = "0.3.2"
 thiserror.workspace = true
 tower-service = "0.3.2"
-dashmap = "6.0.1"
 loole = "0.3.1"
