--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -19,10 +19,8 @@ backend = [
     "exemplar-model",
 ]
 wasm = [ 
-    "web-sys", 
     "wasm-bindgen", 
-    "gloo-net", 
-    "gloo-utils",
+    "gloo", 
     "leptos", 
     "exemplar", 
     "sea-query",
@@ -37,6 +35,12 @@ wasm = [
     "headers",
 
     "sea-query-enum",
+    
+    "web-sys/PushSubscription",
+    "web-sys/PushEncryptionKeyName",
+    "web-sys/PushManager",
+    "web-sys/PushSubscriptionOptionsInit",
+    "web-sys/Exception",
 ]
 build = [ "anyhow" ]
 
@@ -61,6 +65,8 @@ const_format.workspace = true
 http.workspace = true
 http-serde.workspace = true
 paste.workspace = true
+just-webrtc.workspace = true
+dashmap.workspace = true
 
 wasm-bindgen-futures = { workspace = true, optional = true }
 mime = { workspace = true, optional = true }
@@ -68,8 +74,7 @@ anyhow = { workspace = true, optional = true }
 deadpool-sqlite = { workspace = true, optional = true }
 leptos = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
-gloo-net = { workspace = true, optional = true }
-gloo-utils = { workspace = true, optional = true }
+gloo = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
 rusqlite = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
@@ -87,11 +92,7 @@ exemplar = { version = "0.9.0", optional = true }
 percent-encoding = "2.3.1"
 uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false }
 
-web-sys = { workspace = true, optional = true, features = [ 
-    "PushSubscription",
-    "PushEncryptionKeyName",
-    "PushManager",
-    "PushSubscriptionOptionsInit",
-    "Exception",
-] }
+web-sys = { workspace = true, features = [ 
+    "RtcSdpType",
+]}
 semver = "1.0.23"
