--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -20,6 +20,7 @@ wasm-bindgen-futures.workspace = true
 wasm-bindgen.workspace = true
 http.workspace = true
 mime.workspace = true
+exponential-backoff.workspace = true
 webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = [ "time" ] }
