--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -20,7 +20,6 @@ wasm-bindgen-futures.workspace = true
 wasm-bindgen.workspace = true
 http.workspace = true
 mime.workspace = true
-exponential-backoff.workspace = true
 webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = [ "time" ] }
@@ -29,6 +28,7 @@ include_dir.workspace = true
 chrono.workspace = true
 sea-query.workspace = true
 time.workspace = true
+reconnecting-websocket.workspace = true
 web-sys = { workspace = true, features = [
     "CredentialCreationOptions",
     "CredentialRequestOptions",
