--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -6,6 +6,11 @@ version.workspace = true
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[features]
+default = [ "debug-signals" ]
+# Creates extra signals that contain debugging information, visible on the debug tab
+debug-signals = []
+
 [dependencies]
 web-time.workspace = true
 futures.workspace = true
@@ -28,6 +33,7 @@ include_dir.workspace = true
 chrono.workspace = true
 sea-query.workspace = true
 time.workspace = true
+dashmap.workspace = true
 reconnecting-websocket.workspace = true
 web-sys = { workspace = true, features = [
     "CredentialCreationOptions",
